# Rusty_Renderer

./: Cargo.toml  build.rs
src/: draw_functions.rs  game.rs  main.rs  matrix_stuff.rs  mesh_stuff.rs  scene.rs  vec3_stuff.rs  window.rs
